<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">


            <ImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/_30sdp"
                android:src="@mipmap/ic_launcher" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_todo_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:gravity="start|bottom"
                    android:hint="@string/title"
                    android:inputType="textAutoCorrect|textCapSentences"
                    android:lines="2"
                    android:maxLength="30"
                    android:maxLines="3"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_todo_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:gravity="start|bottom"
                    android:hint="@string/description"
                    android:inputType="textMultiLine|textCapSentences"
                    android:lines="2"
                    android:maxLines="3"
                    android:scrollbars="vertical"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="36dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imgBtn_reminderIcon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:background="@android:color/transparent"
                    android:padding="8dp"
                    android:src="@drawable/ic_add_alarm_grey_200_24dp" />

                <TextView
                    android:id="@+id/tv_todo_remindMe"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/remind_me"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sc_todo_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_container_dateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="36dp"
                android:animateLayoutChanges="true"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top">

                    <EditText
                        android:id="@+id/edt_todo_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:editable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textIsSelectable="false" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight=".2"
                        android:gravity="center"
                        android:text="\@"
                        android:textColor="@color/colorAccent" />

                    <EditText
                        android:id="@+id/edt_todo_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:editable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textIsSelectable="false" />


                </LinearLayout>

                <TextView
                    android:id="@+id/tv_todo_finaldateTime"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:text="@string/remind_date_and_time"
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_set_reminder"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@color/colorAccent"
                android:text="@string/setreminder"
                android:textColor="@android:color/black" />


        </LinearLayout>

    </ScrollView>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</RelativeLayout>

    <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/accent"
            android:minHeight="?attr/actionBarSize" />




    </RelativeLayout>-->
